Final Commit, fixed issues and bugs